<resources>
    <string name="app_name">EletricCarApp</string>
    <string name="title">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="Km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular Valor Para Abastecer</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="no_wifi">Internet Não Disponível</string>
    <string name="saved_calc">saved_calc</string>

</resources>