<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"/>

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textStyle="bold"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros"
        android:layout_marginLeft="16dp"/>

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_carros"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="R$ 300.000,00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image" />

    <TextView
        android:id="@+id/tv_bteria"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/bateria"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_value" />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="R$ 300,00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_value" />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/potencia"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_bteria" />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="R$ 300 Kv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria_value" />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/recarga"
        app:layout_constraintStart_toStartOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="23 Min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia_value" />

    <EditText
        android:id="@+id/et_preco_km"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga_value"
         />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Km_percorrido"
        android:layout_marginTop="4dp"
        android:maxLength="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_preco_km"
        app:layout_constraintStart_toStartOf="@id/et_preco_km"
        app:layout_constraintEnd_toEndOf="@id/et_preco_km"
        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />




</androidx.constraintlayout.widget.ConstraintLayout>