<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        tools:layout_editor_absoluteX="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_calc_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/calcular_autonomia"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_preco_km"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintTop_toTopOf="@+id/tv_calc_autonomia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Km_percorrido"
        android:layout_marginTop="4dp"
        android:maxLength="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_preco_km"
        app:layout_constraintStart_toStartOf="@id/et_preco_km"
        app:layout_constraintEnd_toEndOf="@id/et_preco_km"
        />



    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />




</androidx.constraintlayout.widget.ConstraintLayout>