<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/star"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/car"
                android:layout_margin="16dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                app:layout_constraintStart_toStartOf="@id/iv_image"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />


            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:text="R$ 300.000,00"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_bteria"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/bateria"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:textStyle="bold|italic"
                android:text="R$ 300,00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco_value" />

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_bteria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:text="R$ 300 Kv"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateria_value" />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/recarga"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:textStyle="bold|italic"
                android:text="23 Min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potencia_value"

                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>